--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@next/font": "^13.4.8",
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.3.1",
+    "@types/formidable": "^3.4.5",
+    "@types/nodemailer": "^6.4.14",
+    "formidable": "^3.5.1",
     "next": "^13.4.2",
+    "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.21.4"
